<resources>
    <string name="app_name">Kotlin Workout Planner</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_progress">Progress</string>
    <string name="title_objectives">Objectives</string>
    <string name="enter_exercise">Enter exercise</string>
    <string name="add">Add</string>
    <string name="bench_press">Horizontal barbell bench press</string>
    <string name="deadlift_pr">Deadlift PR</string>
    <string name="enter_objective">Enter objective</string>
    <string name="arms_day">Arms day</string>
    <string name="what_are_you_training_today">What are you training today?</string>
    <string name="what_is_your_next_workout">What is your next workout?</string>
    <string name="time_placeholder">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="timer">Timer</string>
    <string name="back">Back</string>
    <string name="exercises">Exercises</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="background_image">background image</string>
    <string name="register_screen">REGISTER SCREEN</string>
    <string name="login_screen">LOGIN SCREEN</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>