<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_workouts">

    <fragment
        android:id="@+id/navigation_workouts"
        android:name="com.eim.kotlin.workout.planner.ui.workouts.WorkoutsFragment"
        android:label="@string/title_workouts"
        tools:layout="@layout/fragment_workouts" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.eim.kotlin.workout.planner.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_objectives"
        android:name="com.eim.kotlin.workout.planner.ui.objectives.ObjectivesFragment"
        android:label="@string/title_objectives"
        tools:layout="@layout/fragment_objectives" />
</navigation>